z-index close btn verify page, error in $ref(cause wasnt avaliable yet fixed with if(){})

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -416,6 +416,9 @@
   @media (max-width: @screen-xs) {
     height: 88px;
   }
+  @media (max-width: 360px) {
+    height: 88px;
+  }
   .undo-btn {
     text-decoration: underline;
     margin-left: 42px;
