--- a/Cloudents.Web/ClientApp/components/registration/verifyPhone/verify.less
+++ b/Cloudents.Web/ClientApp/components/registration/verifyPhone/verify.less
@@ -256,8 +256,10 @@
   }
 }
 .back-button {
+  &.verify-close{
+    z-index: 9;
+  }
   position: absolute;
-  z-index: 9;
   top: 12px;
   right: 4px;
   padding: 8px;
