--- a/Cloudents.Web/ClientApp/components/wallet/wallet.less
+++ b/Cloudents.Web/ClientApp/components/wallet/wallet.less
@@ -43,7 +43,7 @@
 
       .back-button {
         margin-right: 14px;
-        margin-bottom: 12px;
+        margin-bottom: 0;
         width: 17px;
         position: relative;
         outline: none;
